--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,11 +10,11 @@ server {
     listen 80; 
 
     location / {
-        proxy_pass https://client; 
+        proxy_pass http://client; 
     }
 
     location /sockjs-node {
-        proxy_pass https://client;
+        proxy_pass http://client;
         proxy_http_version 1.1;
         proxy_set_header Updgrade $http_upgrade;
         proxy_set_header Connection "Updgrade"; 
@@ -22,6 +22,6 @@ server {
 
     location /api {
         rewrite /api/(.*) /$1 break; 
-        proxy_pass https://api; 
+        proxy_pass http://api; 
     }
 }
