--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,7 +21,9 @@ server {
     }
 
     location /api {
-        rewrite /api(.*) /$1 break; 
-        proxy_pass http://api; 
+        rewrite /api/(.*) $1 break; 
+        proxy_pass http://api;
+        proxy_redirect     off;
+        proxy_set_header   Host $host; 
     }
 }
