--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -23,7 +23,7 @@ server {
     location /api {
         rewrite /api/(.*) $1 break; 
         proxy_pass http://api;
-        proxy_redirect     off;
+        proxy_redirect     on;
         proxy_set_header   Host $host; 
     }
 }
