--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -17,3 +17,16 @@ spec:
           image: wendyharris/multi-server
           ports:
             - containerPort: 5000 
+          env: 
+            - name: REDIS_HOST
+              value: redis-cluster-ip-service 
+            - name: REDIS_PORT
+              value: 6379
+            - name: POSTGRES_USER
+              value: postgres
+            - name: POSTGRES_HOST
+              value: postgres-cluster-ip-service
+            - name: POSTGRES_PORT
+              value: 5432
+            - name: POSTGRES_DATABASE
+              value: postgres
