--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -21,12 +21,17 @@ spec:
             - name: REDIS_HOST
               value: redis-cluster-ip-service 
             - name: REDIS_PORT
-              value: 6379
+              value: '6379'
             - name: POSTGRES_USER
               value: postgres
             - name: POSTGRES_HOST
               value: postgres-cluster-ip-service
             - name: POSTGRES_PORT
-              value: 5432
+              value: '5432'
             - name: POSTGRES_DATABASE
               value: postgres
+            - name: POSTGRES_PASSWORD
+              valueFrom: 
+                secretKeyRef:
+                  name: pgpassword
+                  key: PGPASSWORD 
